# bytespeak-project

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: network.hpp  shutdown.hpp  stateReader.hpp  textToSpeech.hpp  translator.hpp
app/src/: main  main.cpp  network.cpp  shutdown.cpp  stateReader.cpp  textToSpeech.cpp  translator.cpp
bytespeak-voices/: de_DE-eva_k-x_low.onnx.json  de_DE-karlsson-low.onnx.json  en_US-danny-low.onnx.json  es_ES-carlfm-x_low.onnx.json  fr_FR-gilles-low.onnx.json  fr_FR-siwis-low.onnx.json  zh_CN-huayan-x_low.onnx.json
bytespeak-wav-files/: currentMessage.txt
hal/: CMakeLists.txt
hal/include/hal/: audioMixer.hpp  buzzer.h  display.h  display.hpp  languageManager.hpp  ledPanel.hpp  nfc.hpp  potController.hpp  pot_controller.h  pruDriver.hpp
hal/src/: audioMixer.cpp  buzzer.cpp  display.cpp  languageManager.cpp  ledPanel.cpp  nfc.cpp  potController.cpp  pot_controller.cpp  pruDriver.cpp
nodeServer/: CMakeLists.txt  Makefile  server.js
nodeServer/lib/: admin_console_server.js
nodeServer/public/: index.html
nodeServer/public/javascripts/: admin_console_ui.js
nodeServer/public/stylesheets/: style.css
piper/: libespeak-ng.so.1.1.51  piper
piper/espeak-ng-data/: ko_dict  kok_dict  my_dict  shn_dict  th_dict  vi_dict
pru-bytespeak/: CMakeLists.txt  joystickControl.c  sharedDataStruct.h
